Add boilerplate HTML and begin page content

--- a/index.html
+++ b/index.html
@@ -1,2 +1,22 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Home</title>
+        <link rel="stylesheet" href="resources/css/styles.css">
+    </head>
+    <body>
+        <h1>Discover hidden places in the world around you</h1>
+        <a href="" target="_blank">
+            <p>Download Excursion (Coming soon)</p>
+        </a>
+        <img src="">
+        <p>Your personal travel guide</p>
+        <p>Excursion remebers places you like, and recommends new points of interest around you.</p>
+        <p>Coming Soon for iPhone and Android</p>
+        <a href="">
+            <p>Download Excursion (Coming soon!)</p>
+        </a>
+        <p>© Excursion</p>
+    </body>
+</html>
 
