--- a/index.html
+++ b/index.html
@@ -2,21 +2,33 @@
 <html>
     <head>
         <title>Home</title>
-        <link rel="stylesheet" href="resources/css/styles.css">
+        <link rel="stylesheet" href="resources/css/style.css">
     </head>
     <body>
-        <h1>Discover hidden places in the world around you</h1>
+        <h1 style="font-weight: normal; font-size: 50px; color: white">Discover hidden places in the world around you</h1>
         <a href="" target="_blank">
-            <p>Download Excursion (Coming soon)</p>
+            <h4 style="font-size: 16px; color: aquamarine">Download Excursion (Coming soon)</h4>
         </a>
+        <video autoplay muted>
+            <source src="resources/videos/excursion.mov">
+            Video not supported
+        </video>
         <img src="">
-        <p>Your personal travel guide</p>
-        <p>Excursion remebers places you like, and recommends new points of interest around you.</p>
-        <p>Coming Soon for iPhone and Android</p>
+        <h2 style="font-size: 42px; font-weight: 300; color: white">Your personal travel guide</h2>
+        <h3 style="font-size: 21px; color: gray">Excursion remebers places you like, and recommends new points of interest around you.</h3>
+        <p>
+            <img src="resources/images/camp.jpg">
+        </p>
+        <p>
+            <img src="resources/images/phone.png">
+        </p>
+        <h2 style="font-size: 42px; font-weight: 300; color: white">Coming Soon for iPhone and Android</h2>
         <a href="">
-            <p>Download Excursion (Coming soon!)</p>
+            <h4 style="font-size: 16px; color: aquamarine">Download Excursion (Coming soon!)</h4>
         </a>
-        <p>© Excursion</p>
+        <div class="copyright">
+            <h3 style="font-size: 21px; color: gray">© Excursion</h3>
+        </div>
     </body>
 </html>
 
