--- a/index.html
+++ b/index.html
@@ -5,29 +5,31 @@
         <link rel="stylesheet" href="resources/css/style.css">
     </head>
     <body>
-        <h1 style="font-weight: normal; font-size: 50px; color: white">Discover hidden places in the world around you</h1>
-        <a href="" target="_blank">
+        <h1 style="font-weight: normal; font-size: 50px">Discover hidden places in the world around you</h1>
+        <a href="#" target="_blank">
             <h4 style="font-size: 16px; color: aquamarine">Download Excursion (Coming soon)</h4>
         </a>
         <video autoplay muted>
             <source src="resources/videos/excursion.mov">
             Video not supported
         </video>
-        <img src="">
-        <h2 style="font-size: 42px; font-weight: 300; color: white">Your personal travel guide</h2>
+
+        <h2 style="font-size: 42px; font-weight: 300">Your personal travel guide</h2>
         <h3 style="font-size: 21px; color: gray">Excursion remebers places you like, and recommends new points of interest around you.</h3>
         <p>
             <img src="resources/images/camp.jpg">
         </p>
+        
         <p>
             <img src="resources/images/phone.png">
         </p>
-        <h2 style="font-size: 42px; font-weight: 300; color: white">Coming Soon for iPhone and Android</h2>
-        <a href="">
+        <h2 style="font-size: 42px; font-weight: 300">Coming Soon for iPhone and Android</h2>
+        <a href="#">
             <h4 style="font-size: 16px; color: aquamarine">Download Excursion (Coming soon!)</h4>
         </a>
-        <div class="copyright">
-            <h3 style="font-size: 21px; color: gray">© Excursion</h3>
+
+        <div class="footer">
+            <p>&copy; Excursion</p>
         </div>
     </body>
 </html>
